# 3-uzduotis

./: Bundle.wxs  Product.wxs  README.md  Stud.cpp  Student_App.manifest  Zmogus.cpp
Installer/: Bundle.wixobj  Bundle.wxs  Product.wixobj  Product.wxs  StudentDataAnalysisInstaller.wixpdb  Student_App.manifest  cab1.cab  setup.msi  setup.wixpdb
Installer/MyApp/: CMakeLists.txt  README.md  main.cpp  studgeneration.cpp
include/: DoxygenDocumentation.h  Mylib.h  Stud.h  Zmogus.h
src/: Stud.cpp  Zmogus.cpp  main.cpp  studgeneration.cpp
